--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Configure Secrets
         run: |
           echo "Setting up API Key 1..."
-          
+          echo "VITE_KEY_1=${{ secrets.API_KEY_1 }}" >> .env.local
           
           echo "Setting up API Key 2..."
           
