--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -22,8 +22,10 @@ jobs:
           echo "VITE_KEY_1=${{ secrets.API_KEY_1 }}" >> .env.local
           
           echo "Setting up API Key 2..."
+          echo "VITE_KEY_2=${{ secrets.API_KEY_2 }}" >> .env.local
           
           echo "Setting up API Key 3..."
+          echo "VITE_KEY_3=${{ secrets.API_KEY_3 }}" >> .env.local
 
         env:
           API_KEY_1: ${{ secrets.API_KEY_1 }}
