--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,33 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  
+  setup-secrets:
+    name: Setup Secrets
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Set up Secrets
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
+
+      - name: Configure Secrets
+        run: |
+          echo "Setting up API Key 1..."
+          echo "VITE_KEY_1=${{ secrets.API_KEY_1 }}" >> .env.local
+          
+          echo "Setting up API Key 2..."
+          echo "VITE_KEY_2=${{ secrets.API_KEY_2 }}" >> .env.local
+          
+          echo "Setting up API Key 3..."
+          echo "VITE_KEY_3=${{ secrets.API_KEY_3 }}" >> .env.local
+
+        env:
+          API_KEY_1: ${{ secrets.API_KEY_1 }}
+          API_KEY_2: ${{ secrets.API_KEY_2 }}
+          API_KEY_3: ${{ secrets.API_KEY_3 }}
+
   # Single deploy job since we're just deploying
   deploy:
     environment:
